2259
Replying to [comment:4 retronym]:
> The error has evaporated. Perhaps a quick test case, and then this one can be put to bed?

I tried, but they don't seem to have evaporated for me.  Can you verify that you can compile it? Here's what I get with recent trunk:
{code}
files/pos/bug2303.scala:8: error: not found: type $$anon
  implicit val ListFunctor = new Functor[List] {
                             ^
files/pos/bug2303.scala:11: error: not found: type $$anon
  implicit val ListFunctorFMapExplicitReturnType = new Functor[List] {
                                                   ^
{code}
